--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@
 **********************************************************************/
 body {
 	font-family:'Roboto', sans-serif;
-	color:#fff;
-	background:#181A1C;
+	color:#ffffff;
+	background-color:#181A1C;
 	font-size:17px;
 	line-height:20px;
 }
@@ -36,10 +36,10 @@ h1 {
 p {
 	padding:10px;
 	font-weight:100;
-	color:#fff;
+	color:#ffffff;
 }
 .navbar {
-	background:#181A1C;
+	background-color:#181A1C;
 	min-height:60px;
 	padding-top:4.5px;
 	padding-bottom:4.5px;
@@ -66,15 +66,15 @@ p {
 	padding-left:10.25px;
 	padding-right:10.25px;
 	color:#181A1C;
-	background:#C5FF00;
+	background-color:#C5FF00;
 	border-color:#181A1C;
-	transition:color 0.5s, background 0.5s, border-color 0.5s;
+	transition:color 0.5s, background-color 0.5s, border-color 0.5s;
 }
 .navbar > .container-xl > .navbar-toggler:hover,
 .navbar > .container-xl > .navbar-toggler:focus,
 .navbar > .container-xl > .navbar-toggler:active {
 	color:#C5FF00;
-	background:#181A1C;
+	background-color:#181A1C;
 	border-color:#C5FF00;
 }
 .navbar > .container-xl > .navbar-collapse {
@@ -89,7 +89,7 @@ p {
 	transition:height 0.35s !important;
 }
 .navbar > .container-xl > .navbar-collapse > a {
-	color:#fff;
+	color:#ffffff;
 	background-color:#181A1C;
 	text-transform:uppercase;
 	font-size:15px;
@@ -110,15 +110,15 @@ p {
 }
 .nav.nav-pills > button {
 	margin:2px 5px 2px 0;
-	background:#C5FF00;
+	background-color:#C5FF00;
 	border:1px solid #181A1C;
 }
 .nav.nav-pills > button:hover,
 .nav.nav-pills > button:focus,
 .nav.nav-pills > button:active,
 .nav.nav-pills > button.mixitup-control-active {
-	color:#fff;
-	background:#181A1C;
+	color:#ffffff;
+	background-color:#181A1C;
 }
 .da-slider > .container-xl > .da-slide > .da-img {
 	width:30%;
@@ -131,7 +131,7 @@ p {
 }
 .large-text {
 	line-height:1.2em;
-	font-size: 30px;
+	font-size:30px;
 	color:#181A1C;
 	padding:20px;
 	margin-bottom:20px;
@@ -197,7 +197,7 @@ p {
 .button:focus,
 .button:active {
 	background-color:#181A1C;
-	color:#fff;
+	color:#ffffff;
 }
 /* .button-ps,
 .button-ps:visited {
@@ -233,10 +233,10 @@ p {
 	overflow:hidden;
 	position:relative;
 	padding:4px;
-	margin-bottom: 20px;
+	margin-bottom:20px;
 	margin-left:-10px;
 	text-align:center;
-	background:#191a1c;
+	background-color:#191a1c;
 }
 .thumbnail img {
 	display:block;
@@ -278,7 +278,7 @@ p {
 	left:0;
 	width:100%;
 	height:100%;
-	background:#181A1C;
+	background-color:#181A1C;
 	position:absolute;
 	transition:all 0.2s ease-out;
 }
@@ -306,17 +306,17 @@ p {
 	padding:0;
 }
 .section .title > p {
-	color:#fff;
+	color:#ffffff;
 	font-weight:lighter;
 }
 .primary-section {
-	background:#181A1C;
+	background-color:#181A1C;
 }
 .primary-section .triangle {
 	fill:#C5FF00;
 }
 .primary-section .title {
-	border-bottom:1px solid #fff;
+	border-bottom:1px solid #ffffff;
 }
 .primary-section,
 .primary-section .title p,
@@ -324,10 +324,10 @@ p {
 	color:#C5FF00;
 }
 .primary-section h1 {
-	color:#fff;
+	color:#ffffff;
 }
 .secondary-section {
-	background:#C5FF00;
+	background-color:#C5FF00;
 }
 .secondary-section .title {
 	border-bottom:1px solid #181A1C;
@@ -352,7 +352,7 @@ p {
 	top:0;
 	width:100%;
 	height:100%;
-	background:#C5FF00;
+	background-color:#C5FF00;
 	opacity:0.85;
 }
 .da-slider .container-xl {
@@ -413,8 +413,8 @@ p {
 .da-slide .da-link:hover,
 .da-slide .da-link:active,
 .da-slide .da-link:focus {
-	color:#fff;
-	background:#181A1C;
+	color:#ffffff;
+	background-color:#181A1C;
 }
 .da-slide .da-img img {
 	vertical-align:unset;
@@ -437,12 +437,12 @@ p {
 .da-dots span {
 	width:50px;
 	height:3px;
-	background:#fff;
+	background-color:#ffffff;
 	border-radius:0;
 	box-shadow:none;
 }
 .da-dots span.da-dots-current {
-	background:#181A1C;
+	background-color:#181A1C;
 }
 .da-dots span.da-dots-current:after {
 	content:none;
@@ -502,14 +502,14 @@ p {
 .service svg {
 	width:131px;
 	height:131px;
-	background:#fff;
+	background-color:#ffffff;
 }
 /*
 3.2 Portfolio
 **********************************************************************/
 .single-project {
 	margin-bottom:30px;
-	background:#181A1C;
+	background-color:#181A1C;
 }
 .single-project img {
 	width:100%;
@@ -538,7 +538,7 @@ p {
 	height:40px;
 	margin-top:10px;
 	text-align:center;
-	color:#FFFFFF;
+	color:#ffffff;
 }
 .project-info {
 	font-weight:1;
@@ -564,7 +564,7 @@ p {
 }
 .testimonial p {
 	color:#181A1C;
-	background:#C5FF00;
+	background-color:#C5FF00;
 	padding:15px;
 	margin:0;
 }
@@ -638,20 +638,20 @@ a.scrollup {
 	height:40px;
 	text-align:center;
 	font-size:20px;
-	line-height: 35px;
+	line-height:35px;
 	position:fixed;
 	bottom:15px;
 	right:15px;
 	color:#181A1C;
-	background:#C5FF00;
+	background-color:#C5FF00;
 	border:1px solid #181A1C;
 	border-radius:5px;
-	transition:color 0.5s, background 0.5s, border-color 0.5s;
+	transition:color 0.5s, background-color 0.5s, border-color 0.5s;
 }
 a.scrollup:hover,
 a.scrollup:focus,
 a.scrollup:active {
 	color:#C5FF00;
-	background:#181A1C;
+	background-color:#181A1C;
 	border-color:#C5FF00;
 }
