Add info about original version and modification

--- a/css/jquery.cslider.css
+++ b/css/jquery.cslider.css
@@ -1,3 +1,5 @@
+/* Original: https://github.com/Le-Stagiaire/jquery.cslider/blob/7a64edf1ab3eb6af7596ee1deb11de7438bf0280/src/style.css */
+/* Modified: https://github.com/Le-Stagiaire/jquery.cslider/pull/1 */
 .da-slider {
     width: 100%;
     min-width: 520px;
