--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,13 @@ a:hover {
 .centered {
 	text-align:center;
 }
+.medium-text {
+	line-height:1.2em;
+	font-size:22px;
+	color:#181A1C;
+	padding:20px;
+	margin-bottom:20px;
+}
 .large-text {
 	line-height:1.2em;
 	font-size:30px;
