--- a/css/style.css
+++ b/css/style.css
@@ -388,10 +388,10 @@ a:hover {
 	content:none;
 }
 .da-arrows span.da-arrows-next {
-	background:transparent url(../images/slider_right.png) no-repeat center center;
+	background:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='45' height='130'><path fill='none' stroke='white' stroke-width='2' d='M2 0l40 65-40 65'/></svg>") no-repeat center;
 }
 .da-arrows span.da-arrows-prev {
-	background:transparent url(../images/slider_left.png) no-repeat center center;
+	background:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='45' height='130'><path fill='none' stroke='white' stroke-width='2' d='M42 0l-40 65 40 65'/></svg>") no-repeat center;
 }
 .da-dots span {
 	width:50px;
