--- a/css/style.css
+++ b/css/style.css
@@ -18,19 +18,17 @@
 1. General
 **********************************************************************/
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: Arial, sans-serif;
 	color: #ffffff;
 	background-color: #181a1c;
 	font-size: 17px;
 	line-height: 20px;
 }
 h1 {
-	font-weight: 400;
 	margin: 10px 10px 20px;
 }
 p {
 	padding: 10px;
-	font-weight: 300;
 	color: #ffffff;
 }
 a {
@@ -105,7 +103,7 @@ a:hover {
 	text-transform: uppercase;
 	font-size: 15px;
 	margin: 4.5px 0;
-	padding: 10px 15px;
+	padding: 10px 14px;
 	border: 1px solid #181a1c;
 	border-radius: 5px;
 	transition: border-color 1s;
@@ -516,7 +514,6 @@ a:hover {
 	color: #c5ff00;
 }
 .project-info {
-	font-weight: 300;
 	padding: 10px 20px;
 }
 .project-info div {
