--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,8 @@ a:hover {
 	margin-top: 30px;
 	width: 131px;
 	height: 131px;
-	background-color: #ffffff;
+	background-color: #000000;
+	fill: #ffffff;
 	border: 3px solid #ffffff;
 	border-radius: 50%;
 	transition: transform 0.25s;
@@ -471,6 +472,7 @@ a:hover {
 .service img:hover,
 .service svg:hover {
 	transform: scale(1.1, 1.1);
+	border-color: #c5ff00;
 }
 .service h3 {
 	margin-top: 10px;
