--- a/css/style.css
+++ b/css/style.css
@@ -152,32 +152,14 @@ a:hover {
 	height: 30px;
 }
 /*
-2.1 Animations
+2.1 Animations: Class is applied via app.js
 **********************************************************************/
-.animated {
-	animation-fill-mode: both;
-	animation-duration: 1s;
-}
-@keyframes fadeIn {
-	0% { opacity: 0; }
-	100% { opacity: 1; }
-}
-.fadeIn {
-	animation-name: fadeIn;
-}
 @keyframes fadeInDown {
-	0% { opacity:0; transform:translateY(-20px); }
-	100% { opacity:1; transform:translateY(0); }
+	0% { opacity: 0; transform: translateY(-20px); }
+	100% { opacity: 1; transform: translateY(0); }
 }
 .fadeInDown {
-	animation-name: fadeInDown;
-}
-@keyframes fadeOut {
-	0% { opacity:1; }
-	100% { opacity:0; }
-}
-.fadeOut {
-	animation-name: fadeOut;
+	animation: fadeInDown 1s forwards;
 }
 /*
 2.2 Buttons: For green background
