Last (?) stage of rework (#46)
* Last (?) stage of rework

* Delete dietpi-automation.png

* Delete dietpi-backup.png

* Delete dietpi-config.png

* Delete dietpi-interface.png

* Delete dietpi-logging.png

* Delete dietpi-optimised.png

* Delete dietpi-services.png

* Delete dietpi-software.png

* Delete dietpi-update.png

* Delete forum.png

* Delete gettingstarted.png

* Roboto and hence google-font-download are not used anymore

* Web fonts are not used anymore

* Remove now obsolete classes

* Remove obsolete classes

* Add info how/which Font Awesome glyphs we use

* Bump Bootstrap to v4.6.0

* Bootstrap has been bumped to v4.6.0

* Simplify JavaScript code

Remove obsolete checks, since we know our website.
Do not animate and change navigation bar classes anymore, which is now possible since it is a fixed-top bar in every case.

* Fix navbar target scrolling

* Remove unused fadeIn/fadeOut animation and classes

and merge "animated" class styles into only left animation class for triangles

* Further JavaScript enhancements and cleanup

* Exclude footer SVGs from getting hover underline

* Remove obsolete clearfix class

* Merge project-description with column div

--- a/css/style.css
+++ b/css/style.css
@@ -152,32 +152,14 @@ a:hover {
 	height: 30px;
 }
 /*
-2.1 Animations
+2.1 Animations: Class is applied via app.js
 **********************************************************************/
-.animated {
-	animation-fill-mode: both;
-	animation-duration: 1s;
-}
-@keyframes fadeIn {
-	0% { opacity: 0; }
-	100% { opacity: 1; }
-}
-.fadeIn {
-	animation-name: fadeIn;
-}
 @keyframes fadeInDown {
-	0% { opacity:0; transform:translateY(-20px); }
-	100% { opacity:1; transform:translateY(0); }
+	0% { opacity: 0; transform: translateY(-20px); }
+	100% { opacity: 1; transform: translateY(0); }
 }
 .fadeInDown {
-	animation-name: fadeInDown;
-}
-@keyframes fadeOut {
-	0% { opacity:1; }
-	100% { opacity:0; }
-}
-.fadeOut {
-	animation-name: fadeOut;
+	animation: fadeInDown 1s forwards;
 }
 /*
 2.2 Buttons: For green background
@@ -457,7 +439,6 @@ a:hover {
 /*
 3.1 Features
 **********************************************************************/
-.service img,
 .service svg {
 	display: inline-block;
 	margin-top: 30px;
@@ -469,7 +450,6 @@ a:hover {
 	border-radius: 50%;
 	transition: transform 0.25s;
 }
-.service img:hover,
 .service svg:hover {
 	transform: scale(1.1, 1.1);
 	border-color: #c5ff00;
@@ -586,8 +566,8 @@ div.testimonial {
 	color: #c5ff00;
 	padding: 5px;
 }
-.footer a:hover,
-.footer a:focus {
+.footer p > a:hover,
+.footer p > a:focus {
 	text-decoration-line: underline;
 }
 .social a > svg {
