Assure secondary headers get correct colour as well

--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,7 @@ a:hover {
 	border-bottom-color: #181a1c;
 }
 .secondary-section h1,
+.secondary-section h2,
 .secondary-section .title p {
 	color: #181a1c;
 }
