Minor style enhancements
+ Assure that navigation bar image and toggle button do not jump upwards when the menu is expanded in small screens, by defining a top margin that matches the default vertical middle alignment when no expended menu is shown. Use the same as button margin, so that there is some more vertical space between til the first expanded menu element. That way be also become independent of any vertical alignment rule. Explicitly define zero horizontal margin in the same turn, which does not hurt.
+ Allow pre-defined image aspect ratio for thumbnail and project images, when the browser does not support "aspect-ratio" yet (https://developer.mozilla.org/en-US/docs/Web/CSS/aspect-ratio#browser_compatibility). This can be achieved by defining width and height inline and "height: auto" in CSS. In such case, browsers use the inline width and height to obtain an aspect ratio, then the CSS height overrides the inline height, automatically set so that the aspect ratio is preserved. This is a very elegant way that avoids any need for a wrapping container.

--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,12 @@ a:hover {
 .navbar > .container-xl > img {
 	width: 120px;
 	height: 40px;
+	margin: 5.5px 0;
 }
 .navbar > .container-xl > .navbar-toggler {
 	width: 40px;
 	height: 40px;
+	margin: 5.5px 0;
 	padding: 10px;
 	background-color: #c5ff00;
 	border-color: #181a1c;
@@ -196,6 +198,8 @@ a:hover {
 .thumbnail img {
 	display: block;
 	width: 100%;
+	/* "height: auto" in combination with inline width and height allows to keep aspect ratio while loading for non-bleeding edge browsers, which do not support "aspect-ratio" yet. */
+	height: auto;
 	aspect-ratio: 8/5;
 }
 .thumbnail h3,
@@ -518,6 +522,8 @@ a:hover {
 }
 .single-project img {
 	width: 100%;
+	/* "height: auto" in combination with inline width and height allows to keep aspect ratio while loading for non-bleeding edge browsers, which do not support "aspect-ratio" yet. */
+	height: auto;
 	padding: 15px;
 }
 /*
