--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 	background-color: #181a1c;
 	font-size: 17px;
 	line-height: 20px;
+	margin-top: 60px;
 }
 h1 {
 	margin: 10px 10px 20px;
@@ -294,7 +295,7 @@ a:hover {
 }
 /* Slider: https://github.com/Le-Stagiaire/jquery.cslider */
 .da-slider {
-	margin: 60px 0 0;
+	margin: 0;
 	height: 45vw;
 	max-height: 450px;
 	min-width: unset;
