--- a/css/jquery.cslider.css
+++ b/css/jquery.cslider.css
@@ -69,21 +69,21 @@
 
 .da-slide .da-link {
     top: 270px; /*depends on p height*/
-    border-radius: 30px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    /*box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);*/
     color: #fff;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-    border: 8px solid rgba(255, 255, 255, 0.8);
-    padding: 2px 20px 0;
+    /*text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);*/
+    border: 1px solid #164046;
+    padding: 15px 30px;
     font-size: 18px;
     line-height: 30px;
     width: 80px;
     text-align: center;
-    background: rgba(255, 255, 255, 0.2);
+    background-color: #164046;
 }
 
 .da-slide .da-link:hover {
-    background: rgba(255, 255, 255, 0.3);
+    background-color: #c5ff00;
 }
 
 .da-dots {
